# twic

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  release.yml
app/: main.py  observability.py
app/core/: settings.py
app/models/: schemas.py
app/routers/: admin.py  classify.py  feedback.py  health.py  ready.py  taxonomy.py
app/services/: classifier.py  embeddings.py  fusion.py  preprocessing.py  retrieval.py  retrieval_bm25.py  taxonomy_store.py
data/: _test_taxonomy_output.json  eval_queries.sample.jsonl  taxonomy.json  taxonomy_skos.jsonld
data/feedback/: 2025-10-14.jsonl
deploy/alerts/: prometheus-rules.yml
docs/: CONTRATO_SOW.md  observability.md  quickstart.md  retraining.md
docs/runbooks/: errors.md  (+4 more)
models/: metadata.json
scripts/: build_embeddings.py  cli_classify.py  eval_offline.py  eval_taxonomy_search.py  feedback_consolidate.py  import_skos_jsonld.py  retrain_classifier.py  select_uncertain.py  smoke.py  smoke.sh  train_classifier.py  validate_notation.py
tests/: test_api_endpoints.py  test_embeddings_placeholder.py  test_health_metrics.py  test_metadata_fields.py  test_ready_endpoint.py  test_taxonomy_autocomplete.py  test_taxonomy_detail.py  test_taxonomy_embeddings_gauge.py  test_taxonomy_fuzzy.py  test_taxonomy_search_ranking.py  test_taxonomy_store.py
twic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1 files in other folders)
