[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twic"
version = "0.2.1"
description = "MVP de clasificación de intenciones de búsqueda"
requires-python = ">=3.11"
dependencies = [
  "rank-bm25>=0.2.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "faiss-cpu>=1.8",
  "joblib>=1.3",
  "python-dotenv>=1.0",
  "orjson>=3.10",
  "rdflib>=6.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-python-dateutil",
]
embeddings = [
  "sentence-transformers>=3.0"
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","N","B","W"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
pythonpath = ["."]
